--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ edition = "2018"
 [dependencies]
 sha1 = "0.6.0"
 linked-hash-map = "0.5.2"
+clap = { version = "3.2", features = ["color", "derive", "cargo"] }
+thiserror = "1.0"
